[project]
name = "PyPSO"
version = "0.1.0"
description = "Particle Swarm Optimization Algorithm Implemented in Python | Python实现粒子群优化算法"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.4.5",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pydantic>=2.11.7",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
